vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentSession_v2__c/SDO_Analytics_AIAgentSession_v2__c.object-meta.xml
<CustomObject>
    <label>AIAgentSession</label>
    <nameField>
        <label>AIAgentSession</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AIAgentSessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>