vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentSession_v2__c/fields/Previous_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Previous_Session_Id__c</fullName>
    <label>Previous Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>