vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentSession_v2__c/fields/Related_Messaging_Session__c.field-meta.xml
<CustomField>
    <fullName>Related_Messaging_Session__c</fullName>
    <label>Related Messaging Session</label>
    <length>255</length>
    <type>Text</type>
</CustomField>