vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentSession_v2__c/fields/Related_Voice_Call__c.field-meta.xml
<CustomField>
    <fullName>Related_Voice_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Voice Call</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipLabel>AIAgentSessions</relationshipLabel>
    <relationshipName>AIAgentSessions</relationshipName>
    <type>Lookup</type>
</CustomField>