vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentSession_v2__c/fields/Session_Owner__c.field-meta.xml
<CustomField>
    <fullName>Session_Owner__c</fullName>
    <label>Session Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>