vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentSession_v2__c/fields/Start_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Start_Timestamp__c</fullName>
    <formula>DATETIMEVALUE(TEXT(TODAY() + Start_Days__c) + &quot; &quot; + Start_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Timestamp</label>
    <type>DateTime</type>
</CustomField>