vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentSession_v2__c/fields/Variable__c.field-meta.xml
<CustomField>
    <fullName>Variable__c</fullName>
    <label>Variable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>