vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentSession_v2__c/listViews/Session_with_Voice_Calls.listView-meta.xml
<ListView>
    <fullName>Session_with_Voice_Calls</fullName>
    <columns>NAME</columns>
    <columns>AI_Agent_Channel_Type__c</columns>
    <columns>AI_Agent_Session_End_Type__c</columns>
    <columns>Individual__c</columns>
    <columns>Previous_Session_Id__c</columns>
    <columns>Related_Messaging_Session__c</columns>
    <columns>Related_Voice_Call__c</columns>
    <columns>Session_Owner__c</columns>
    <columns>Session_Owner_Object__c</columns>
    <columns>Variable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Related_Voice_Call__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Session with Voice Calls</label>
</ListView>